--- a/styles/style.css
+++ b/styles/style.css
@@ -21,7 +21,7 @@ body {
 }
 
 .container {
-    width: 80vw;
+    max-width: 992px;
     margin: auto;
 }
 
@@ -46,11 +46,11 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 111px 0 111px 106px;
+    padding: 5vw 0 5vw 5vw;
 }
 
 #banner-heading {
-    font-size: 3.5em;
+    font-size: 4vw;
     line-height: 1em;
 }
 
@@ -86,18 +86,37 @@ body {
 
 .main-container {
     display: flex;
+    align-items: flex-start;
     gap: 1.5rem;
-    margin-top: 4em;
+    margin: 4em 0;
 }
 
 .left-nav {
-    width: 25rem;
+    width: 25%;
     background-color: #161616;
-    border-radius: 10px;
+    border-radius: 7px;
+    display: flex;
+    flex-direction: column;
+    gap: 1em;
+    padding: 1.5em;
+}
+
+.left-nav>button {
+    border: none;
+    width: 100%;
+    font-size: 0.9em;
+    padding: 0.5em;
+    border-radius: 7px;
+}
+
+.left-nav>button:hover,
+.active {
+    background-color: #DD0000;
+    color: #ffffff;
 }
 
 .blog-cards {
-    width: 75rem;
+    width: 75%;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 1.5rem;
@@ -136,8 +155,19 @@ body {
     padding: 1em 0;
 }
 
-.thumbnail-heading:hover {
+.thumbnail-heading:hover,
+.time-comment p:nth-child(1):hover,
+.time-comment p:nth-child(2):hover,
+.footer-link-container a:hover {
     color: #DD0000;
+}
+
+.social-link-container a img {
+    opacity: 0.5;
+}
+
+.social-link-container a img:hover {
+    opacity: 1;
 }
 
 .time-comment {
@@ -145,23 +175,139 @@ body {
     gap: 2em;
 }
 
-.time-comment p:nth-child(1):hover,
-.time-comment p:nth-child(2):hover {
-    color: #DD0000;
-}
-
-
-
-
-
-
-
-
-
-
+/* -----------------------------------------------------
+---------------------- Footer Section Style ------------
+------------------------------------------------------ */
 
 footer {
     width: 100vw;
-    height: 30vh;
-    background-color: #ffff;
+    background-color: #161616;
+    text-align: center;
+    padding: 2em 0;
+    color: white
+}
+
+.hr-line {
+    width: 80vw;
+    margin: 2em auto;
+    border-top: 0.1px solid white;
+}
+
+.footer-link-container {
+    display: flex;
+    gap: 1.5em;
+    justify-content: center;
+    flex-wrap: wrap;
+    margin-bottom: 1em;
+}
+
+.footer-link-container a {
+    color: white;
+    text-decoration: none;
+}
+
+.social-link-container a {
+    font-size: 1.5em;
+    margin-left: 0.6em;
+    color: white;
+}
+
+/* Responsiveness */
+/* Tablet */
+
+@media screen and (max-width: 991px) {
+    .container {
+        padding: 2em;
+    }
+
+    .main-container {
+        flex-direction: column;
+        margin: 0;
+    }
+
+    .left-nav {
+        width: 100%;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        background-color: #ffffff;
+        padding: 0 0 1.5em 0;
+    }
+
+    .left-nav>button {
+        border: none;
+        width: 30%;
+        font-size: 0.9em;
+        padding: 1em;
+        border-radius: 7px;
+    }
+
+    .blog-cards {
+        width: 100%;
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+
+/* Mobile */
+
+@media screen and (max-width: 767px) {
+    .header-container {
+        flex-direction: column;
+        padding: 0.5em 0.5em 0 0.5em;
+    }
+
+    .banner-image {
+        width: 100%;
+    }
+
+    .banner-text {
+        width: 100%;
+    }
+
+    .center-align {
+        text-align: center;
+        margin-right: 1em;
+    }
+
+    #banner-heading {
+        font-size: 6vw;
+        line-height: 1.5em;
+    }
+
+    #banner-details {
+        width: 100%;
+        height: 52px;
+        font-size: 2.5vw;
+        /* border: 1px solid white; */
+    }
+
+    .left-nav {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .left-nav>button {
+        width: max-content;
+        font-size: 1em;
+        padding: 0.7em 3em;
+    }
+
+    .blog-cards {
+        width: 100%;
+        /* display: grid; */
+        grid-template-columns: repeat(1, 1fr);
+        /* gap: 1.5rem; */
+    }
+
+    #watch-live-btn {
+        /* background-color: #DD0000;
+        border: 3px solid #DD0000;
+        border-radius: 5px;
+        color: #ffffff;
+        padding: 10px 20px; */
+        font-size: 3vw;
+        /* letter-spacing: 0.1em;
+        font-weight: 700; */
+    }
+
 }
