--- a/styles/style.css
+++ b/styles/style.css
@@ -1,12 +1,12 @@
-/* -----------------------------------------------------
----------------------- Google Fonts ---------------------
------------------------------------------------------- */
+/*  ======================================================
+    ==================== Google Fonts ====================
+    ====================================================== */
 
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 
-/* -----------------------------------------------------
----------------------- Common Style-------------------
------------------------------------------------------- */
+/*  ======================================================
+    ==================== Common Styles ===================
+    ====================================================== */
 
 * {
     margin: 0;
@@ -25,9 +25,9 @@ body {
     margin: auto;
 }
 
-/* -----------------------------------------------------
----------------------- Header Section Style ------------
------------------------------------------------------- */
+/*  ======================================================
+    ==================== Header Section Style ============
+    ====================================================== */
 
 .header-container {
     display: flex;
@@ -68,6 +68,34 @@ body {
     font-size: 1em;
     letter-spacing: 0.1em;
     font-weight: 700;
+    cursor: pointer;
+
+    /*  ========================================================
+        =================== Use Animation ======================
+        ======================================================== */
+
+    animation-name: blink;
+    animation-duration: 2s;
+    animation-timing-function: linear;
+    animation-iteration-count: infinite;
+}
+
+@keyframes blink {
+    0% {
+        /*  ========================================================
+        =================== Use Transform ======================
+        ======================================================== */
+
+        transform: scale(1);
+    }
+
+    50% {
+        transform: scale(1.2);
+    }
+
+    100% {
+        transform: scale(1);
+    }
 }
 
 .banner-image {
@@ -80,9 +108,9 @@ body {
     width: 85%;
 }
 
-/* -----------------------------------------------------
----------------------- Main Section Style ------------
------------------------------------------------------- */
+/*  ========================================================
+    =================== Main Section Style =================
+    ======================================================== */
 
 .main-container {
     display: flex;
@@ -107,6 +135,10 @@ body {
     font-size: 0.9em;
     padding: 0.5em;
     border-radius: 7px;
+    /*  ========================================================
+        =================== Use Transition =====================
+        ======================================================== */
+    transition: background-color 500ms;
 }
 
 .left-nav>button:hover,
@@ -192,9 +224,9 @@ body {
     font-weight: 700;
 }
 
-/* -----------------------------------------------------
----------------------- Match Section Style ------------
------------------------------------------------------- */
+/*  ========================================================
+    =================== Match Section Transform ============
+    ======================================================== */
 .match-cards {
     width: 100%;
     display: grid;
@@ -232,9 +264,9 @@ body {
     color: #706d6d;
 }
 
-/* -----------------------------------------------------
----------------------- Footer Section Style ------------
------------------------------------------------------- */
+/*  ========================================================
+    =================== Footer Section Style ===============
+    ======================================================== */
 
 footer {
     width: 100vw;
@@ -269,8 +301,11 @@ footer {
     color: white;
 }
 
-/* Responsiveness */
-/* Tablet */
+/*  ========================================================
+    =================== Responsiveness =====================
+    ======================================================== */
+
+/* ======================= Tablet ========================== */
 
 @media screen and (max-width: 991px) {
     .container {
@@ -326,7 +361,7 @@ footer {
     }
 }
 
-/* Mobile */
+/* ======================= Phone ========================== */
 
 @media screen and (max-width: 767px) {
     .header-container {
