--- a/styles/style.css
+++ b/styles/style.css
@@ -59,6 +59,14 @@ body {
     margin: 2em 0;
 }
 
+abbr {
+    text-decoration: none;
+    background-color: #DD0000;
+    border-radius: 3px;
+    padding: 0 4px;
+    cursor: pointer;
+}
+
 #watch-live-btn {
     background-color: #DD0000;
     border: 3px solid #DD0000;
@@ -69,6 +77,7 @@ body {
     letter-spacing: 0.1em;
     font-weight: 700;
     cursor: pointer;
+    text-transform: uppercase;
 
     /*  ========================================================
         =================== Use Animation ======================
